@@ -13,4 +13,5 @@ export(encode)
 export(initsing)
 export(inters)
 export(nameRows)
+export(nzdsr)
 export(plautrans)
