@@ -1,42 +1,42 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/nzdsr.R
 \name{nzdsr}
 \alias{nzdsr}
-\title{
-Normalization of Dempster's rule of combination, Shafer method.
-}
-\description{
-A normalization of the result from the combination of two belief functions is done. If there is no non-zero mass allotted to the empty intersection, the result does not change. Otherwise, the normalization follows the method proposed by Shafer, which consist in dividing the results by 1 minus the mass allotted to the empty set.
-}
+\title{Normalization of results from Dempster's rule of combination}
 \usage{
-nzdsr(x)
+nzdsr(x, infovar = NULL, relnb = NULL)
 }
 \arguments{
-  \item{x}{
-The list x is the result of function dsrwon.
-  }
-}
-\details{
- The input list x has four elements:\cr
-  x$combination is the non-normalized result of the combination of the two tables by the Dempster's rule;\cr
-  x$I12 is the intersection table;\cr
-  x$TRI is a vector of indexes for the sort;\cr
-  x$con is the measure of conflict between beliefs.
+\item{x}{A list, normally the result of the combination of two belief functions that we want to normalize. (see \code{\link{dsrwon}}). A belief function in its bca form (see \code{\link{bca}}) may also be submitted.}
+
+\item{infovar}{A two column matrix containing the variable numbers and the size of the product frame of discernment of each variable.}
+
+\item{relnb}{Set at NULL.}
 }
 \value{
-The result is a list y in bca form:\cr
-  y$DempsterRule is the normalized result of the combination of the two tables by the Dempster's rule, following Shafer method of normalization;\cr
-  y$con is the measure of conflict between beliefs.\cr
+A list in the bca form: \itemize{
+  \item $combination: The table of focal elements with their associated mass.
+  \item $con The measure of conflict.
+  \item $n The node number.
+  }
 }
-\references{
-Shafer, G., (1976). A Mathematical Theory of Evidence. Princeton University Press, Princeton, New Jersey. 296 p.
-~ add pages here.
-}
-\author{
-Claude Boivin, Stat.ASSQ.
+\description{
+The combination of two bca distributions may produce a distribution with a non zero mass allocated to the empty set. This function produces a normalized distribution by dividing the focal elements (other than the empty set) by 1 minus the mass of the empty set.
 }
 \examples{
-## Not run: 
-x<-list(DempsterRule=t(matrix(c(.9,1,0,.1,1,1),ncol=2)),con=0)
-y<-list(DempsterRule=t(matrix(c(.5,0,1,.5,1,1),ncol=2)),con=0)
-nzdsr(dsrwon(x,y))
-## End(Not run)
+x1 <- bca(f=matrix(c(1,0,1,1),nrow=2, byrow = TRUE), m=c(0.9,0.1), cnames =c("yes", "no"), n=1)
+y1 <- bca(f=matrix(c(0,1,1,1),nrow=2, byrow = TRUE), m=c(0.5,0.5), cnames =c("yes", "no"), n=1)
+print("combination of x1 and y1")
+x1y1 <- dsrwon(x1,y1)
+nzdsr(x1y1) 
+
+print("normalization of a bca definition.")
+y2 <- bca(f=matrix(c(0,0,0,1,0,0,1,1,1),nrow=3, byrow = TRUE), m=c(0.2,0.5,0.3), cnames =c("a", "b", "c"), n=1)
+nzdsr(y2)  
+}
+\references{
+Shafer, G., (1976). A Mathematical Theory of Evidence. Princeton University Press, Princeton, New Jersey, p. 57-61: Dempster's rule of combination.
+}
+\author{
+Claude Boivin, Stat.ASSQ
 }
